--- a/spotify/index.html
+++ b/spotify/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg">
+    <meta name="google-site-verification" content="1IEO1D7pe4D5WSCVmfmeSGDOhZFnb7wa2ztJiz_mhk4" />
 </head>
 
 <body>
