--- a/spotify/index.html
+++ b/spotify/index.html
@@ -7,6 +7,10 @@
     <title>Spotify</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg">
     <meta name="google-site-verification" content="1IEO1D7pe4D5WSCVmfmeSGDOhZFnb7wa2ztJiz_mhk4" />
+    <meta name="description" content="Listen to your favorite songs for free on BGKK Spotify. No ads, just music!">
+    <meta name="keywords" content="free music, spotify alternative, online music, bgkk spotify">
+    <meta name="robots" content="index, follow">
+
 </head>
 
 <body>
