--- a/spotify/index.html
+++ b/spotify/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify</title>
+    <title>BGKK-Songs</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg">
     <meta name="google-site-verification" content="1IEO1D7pe4D5WSCVmfmeSGDOhZFnb7wa2ztJiz_mhk4" />
     <meta name="description" content="Listen to your favorite songs for free on BGKK Spotify. No ads, just music!">
